# forest-inventory-analyzer-rust

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  deny.toml  start.bat  todos.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
data/samples/: sample_inventory.csv
docs/: architecture.md
examples/: basic_analysis.rs  format_conversion.rs  growth_projection.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_csv.rs  fuzz_json.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/analysis/: analyzer.rs  diameter_distribution.rs  growth.rs  metrics.rs  mod.rs  statistics.rs
src/io/: cruise_import.rs  csv_io.rs  excel_io.rs  geojson_io.rs  json_io.rs  mod.rs
src/models/: inventory.rs  mod.rs  plot.rs  tree.rs  volume.rs
src/visualization/: charts.rs  mod.rs  tables.rs
src/web/: handlers.rs  mod.rs  state.rs
static/: app.js  index.html  style.css
tests/: cli_test.rs  integration_test.rs  proptest_tests.rs  snapshot_tests.rs
tests/snapshots/: snapshot_tests__snapshot_diameter_histogram.snap  snapshot_tests__snapshot_growth_table.snap  snapshot_tests__snapshot_species_table.snap  snapshot_tests__snapshot_stand_summary.snap  snapshot_tests__snapshot_statistics_table.snap
wix/: License.rtf  main.wxs
