[package]
name = "forest_inventory_analyzer"
version = "0.1.0"
edition = "2021"
description = "A comprehensive forest inventory analysis tool with statistical modeling, visualization, and growth projections"
license = "MIT"
readme = "README.md"
keywords = ["forestry", "inventory", "analysis", "statistics", "ecology"]
categories = ["science", "command-line-utilities"]

[lib]
name = "forest_inventory_analyzer"
path = "src/lib.rs"

[[bin]]
name = "forest-analyzer"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
calamine = "0.26"
rust_xlsxwriter = "0.79"

# Statistics & Math
statrs = "0.17"

# Error handling
thiserror = "2"
anyhow = "1"

# Output & Visualization
comfy-table = "7"
colored = "2"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
assert_approx_eq = "1"
tempfile = "3"
