[package]
name = "forest_inventory_analyzer"
version = "0.1.0"
edition = "2021"
description = "A comprehensive forest inventory analysis tool with statistical modeling, visualization, and growth projections"
license = "MIT"
readme = "README.md"
keywords = ["forestry", "inventory", "analysis", "statistics", "ecology"]
categories = ["science", "command-line-utilities"]
repository = "https://github.com/woodsy-will/forest-inventory-analyzer-rust"
homepage = "https://github.com/woodsy-will/forest-inventory-analyzer-rust"
documentation = "https://docs.rs/forest_inventory_analyzer"
exclude = [".github/", ".claude/", "data/", "forest_analyzer.db"]

[lib]
name = "forest_inventory_analyzer"
path = "src/lib.rs"

[[bin]]
name = "forest-analyzer"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
calamine = "0.26"
rust_xlsxwriter = "0.79"

# Statistics & Math
statrs = "0.17"

# Error handling
thiserror = "2"
anyhow = "1"

# Output & Visualization
comfy-table = "7"
colored = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# Temp files (needed for Excel byte parsing)
tempfile = "3"

# Web (optional, gated behind "web" feature)
actix-web = { version = "4", optional = true }
actix-multipart = { version = "0.7", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
futures = { version = "0.3", optional = true }
mime = { version = "0.3", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
actix-cors = { version = "0.7", optional = true }

[features]
default = ["web"]
web = ["actix-web", "actix-multipart", "tokio", "uuid", "futures", "mime", "rusqlite", "actix-cors"]

[dev-dependencies]
assert_approx_eq = "1"
assert_cmd = "2"
predicates = "3"
